fix sidebar alignment in mobile embed

--- a/web/scss/features/embed.scss
+++ b/web/scss/features/embed.scss
@@ -80,6 +80,7 @@
 
   #wv-sidebar {
     transform: scale(0.75);
+    transform-origin: left center;
 
     #download-sidebar-tab {
       display: none;
